test/valid/StringStack/TestStackPushPeek.plume
/**
 * A class to test the String Stack's push and peek
 *
 * @author Robin Burgess 36815
 */
class TestStackPushPeek extends Object is
  method main : () -> String is
    new EmptyStack().push("Hello").peek()
    
  method override toString : () -> String is
	"TestStackPushPeek"